baldur/heimdall_dashboard/depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: heimdall # < name of the deployment
  namespace: utils # < namespace where place the deployment and pods
  labels:
    app: heimdall # < label for tagging and reference
spec:
  replicas: 1 # < number of pods to deploy
  selector:
    matchLabels:
      app: heimdall
  strategy:
    rollingUpdate:
      maxSurge: 1 # < The number of pods that can be created above the desired amount of pods during an update
      maxUnavailable: 1 # < The number of pods that can be unavailable during the update process
    type: RollingUpdate # < New pods are added gradually, and old pods are terminated gradually
  template:
    metadata:
      labels:
        app: heimdall
    spec:
      volumes:
        - name: local-heimdall # < linkname of the volume for the pvc
          persistentVolumeClaim:
            claimName: heimdall-pvc # < pvc name we created in the previous yaml # < the name ssl certificate, will be created in the ingress yaml
      containers:
        - image: ghcr.io/linuxserver/heimdall # < the name of the docker image we will use
          name: heimdall # < name of container
          imagePullPolicy: Always
          resources:
            requests:
              memory: "164Mi"
              cpu: "250m"
            limits:
              memory: "228Mi"
              cpu: "500m" # < always use the latest image when creating container/pod
          env: # < the environment variables required (see container documentation)
            - name: PGID
              value: "1000"
            - name: PUID
              value: "1000"
            - name: TZ
              value: Europe/Warsaw
          ports: # < the ports required (see container documentation)
            - containerPort: 80
              name: http-80
              protocol: TCP
            - containerPort: 443
              name: https-443
              protocol: TCP
          volumeMounts: # < the volume mount in the container. Look at the relation volumelabel->pvc->pv
            - mountPath: /config # < mount location in the container
              name: local-heimdall # < volumelabel configured earlier in the yaml file
              subPath: config # < subfolder in the nfs share to be mounted
          livenessProbe:
            tcpSocket:
              port: 80
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            tcpSocket:
              port: 80
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          startupProbe:
            tcpSocket:
              port: 80
            timeoutSeconds: 1
            periodSeconds: 5
            successThreshold: 1
            failureThreshold: 30
